Fixed overflow on main page.

--- a/client/styles/panels.styl
+++ b/client/styles/panels.styl
@@ -28,6 +28,8 @@
 	&.error
 		border-width 2px
 		border-style solid
+	&.collapse
+		overflow hidden
 	> .panel-heading
 		border-top-radius($border-radius-small)
 		padding 7px 12px 6px
